# microservices-fastapi-project

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py  migrate_database.py
app/api/v1/: hello.py  task.py
app/models/: task.py
app/schemas/: task.py
app/services/: task.py
tests/: test_task.py
