[tool.poetry]
name = "microservices-fastapi-project"
version = "0.1.0"
description = "FastAPI project template for microservices"
authors = ["Takashi Yamashina <takashi.yamashina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-coverage = "^0.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
